--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -1,7 +1,8 @@
 .projects-container {
   .header {
-    font-size: 24px;
+    font-size: 26px;
     padding: 10px;
+    font-weight: bold;
   }
   .body-container {
     display: flex;
