--- a/src/Projects/Projects.scss
+++ b/src/Projects/Projects.scss
@@ -1,6 +1,6 @@
 .projects-container {
   .header {
-    font-size: 26px;
+    font-size: 32px;
     padding: 10px;
     font-weight: bold;
   }
@@ -8,10 +8,22 @@
     display: flex;
     flex-direction: column;
     .image-container {
+      widgh: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .project-img {
+        height: 320px;
+        width: 600px;
+      }
     }
     .spool-header {
-      font-size: 22px;
-      margin-top: 45px;
+      font-size: 24px;
+      margin-top: 40px;
+      margin-bottom: 10px;
+      @media (max-width: 767px) {
+        font-size: 20px;
+      }
     }
     .spool-pieces-container {
       display: flex;
@@ -20,20 +32,37 @@
       .spool-pieces {
         display: flex;
         justify-content: space-between;
-        width: 70%;
+        width: 60%;
+        @media (max-width: 767px) {
+          width: 80%;
+        }
         .spool-piece {
           display: flex;
           width: fit-content;
-          flex-direction: column-reverse;
+          flex-direction: column;
           align-items: center;
           height: 85px;
           .spool-piece-title {
+            font-size: 20px;
+            @media (max-width: 767px) {
+              font-size: 16px;
+            }
+          }
+          .faulty-spool-piece-title {
+            font-size: 20px;
+            color: red;
+            @media (max-width: 767px) {
+              font-size: 14px;
+            }
+          }
+          .note {
             font-size: 18px;
           }
           .spool-piece-img-container {
             .spool-piece-img {
               height: 50px;
               width: 50px;
+              background-size: 100% 100%;
             }
           }
         }
