--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -1,3 +1,7 @@
 .main-container {
-  height: 78.5vh;
+  height: 80.8vh;
+  // background-color: #005396;
+  background-color: #043359;
+  // background-color: #072f50;
+  color: white;
 }
