--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -1,3 +1,9 @@
 .navbar-container {
-  font-size: 18px;
+  font-size: 22px;
+  .navbar.navbar.navbar-inverse {
+    margin-bottom: 0;
+  }
+  .navbar-brand {
+    font-size: 22px;
+  }
 }
