add link to projects on auth

--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -1,7 +1,7 @@
 .main-container {
-  height: 81.4vh;
+  height: 85vh;
   // background-color: #005396;
-  background-color: #043359;
+  background-color: #052c4b;
   // background-color: #072f50;
   color: white;
 }
