--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -26,6 +26,7 @@ body {
   height: 100%;
   min-height: 100%;
   padding: 20px;
+  padding-bottom: 100px;
   background: rgba(darken($primary, 40%), 0.85);
 }
 
@@ -174,4 +175,10 @@ footer {
     color: #fff;
     text-decoration: none;
   }
+}
+
+a.state {
+  text-decoration: none;
+  color: white;
+  font-size: 26px;
 }
